More spacing between issues

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -39,6 +39,10 @@ b {
   }
 }
 
+.issue {
+  margin: 10rem auto;
+}
+
 .issue-name {
   margin: 5rem auto;
 }
